# xxor

./: .gitignore  CMakeLists.txt
src/: circular_queue.c  circular_queue.h  debugging.c  debugging.h  key_management.c  key_management.h  main.c  main.h  network_manager.c  network_manager.h  promise.h  types.h  utils.h
